--- a/sam/package.json
+++ b/sam/package.json
@@ -10,32 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "lucide-react": "^0.454.0",
+    "@tailwindcss/vite": "^4.1.16",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "lucide-react": "^0.454.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-head": "^3.4.2",
+    "react-router-dom": "^7.9.5",
     "tailwind-merge": "3.3.1",
-    "tailwindcss-animate": "1.0.7",
-    "tw-animate-css": "1.3.3",
     "tailwindcss": "^4.1.16",
-    "@tailwindcss/vite": "^4.1.16"
+    "tailwindcss-animate": "1.0.7",
+    "tw-animate-css": "1.3.3"
   },
   "devDependencies": {
-    "vite": "^7.1.7",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.9",
+    "@types/node": "24.10.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
-    "@types/node": "24.10.0",
-    "typescript": "5.9.3",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5",
-    "@tailwindcss/postcss": "^4.1.9",
-    "@eslint/js": "^9.36.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "babel-plugin-react-compiler": "^19.1.0-rc.3"
+    "postcss": "^8.5",
+    "typescript": "5.9.3",
+    "vite": "^7.1.7"
   }
 }
